--- a/styles/_left_side.scss
+++ b/styles/_left_side.scss
@@ -13,7 +13,7 @@
 }
 
 .about {
-	& h2 {
+	&__title {
 		position: relative;
 		width: 250px;
 		margin: 15px 20px 0 25px;
@@ -62,22 +62,24 @@
 		cursor: pointer;
 	}
 
-	.icon {
-		align-self: center; /* Вертикальное выравнивание */
-		justify-self: left; /* Горизонтальное выравнивание */
-	}
-
-	.logo {
-		width: 30px;
-		height: 30px;
-		color: #67b4f2;
-	}
-
-	.contact__list-item h4 {
-		font-weight: 500;
-	}
 	.contact__list-item span {
 		font-weight: 100;
+	}
+}
+
+.item {
+	&-text {
+		font-weight: 500;
+	}
+	&-icon {
+		align-self: center; /* Вертикальное выравнивание */
+		justify-self: left; /* Горизонтальное выравнивание */
+
+		&__logo {
+			width: 30px;
+			height: 30px;
+			color: #67b4f2;
+		}
 	}
 }
 
@@ -122,7 +124,7 @@
 	}
 
 	.education__text span {
-		font-weight: 100;
+		font-weight: 110;
 	}
 	.education__list-item h4 {
 		font-weight: 500;
