--- a/styles/_left_side.scss
+++ b/styles/_left_side.scss
@@ -22,13 +22,13 @@
 		line-height: 45px;
 		text-transform: uppercase;
 		color: #fff;
-		font-weight: 300;
+		font-weight: 500;
 		border-bottom: 1px solid rgb(72, 70, 70);
 	}
 
 	& span {
 		font-size: 16px;
-		font-weight: 100;
+		font-weight: 300;
 		margin-bottom: 20px;
 	}
 }
@@ -38,7 +38,7 @@
 	width: 250px;
 	margin: 0 20px 0 25px;
 	max-width: 280px;
-	padding: 25px 0;
+	padding: 25px 5px 5px 5px;
 	/* padding-left: 8px; */
 	border-bottom: 1px solid rgb(72, 70, 70);
 
@@ -47,6 +47,7 @@
 		font-weight: 700;
 		letter-spacing: 1.5px;
 		/* padding-left: 15px; */
+		transition: padding-left 0.3s ease;
 	}
 }
 
@@ -55,15 +56,17 @@
 	margin-top: 0;
 
 	.contact__list-item {
-		display: grid;
-		grid-template-columns: 1fr 4fr;
+		display: flex;
+		flex-direction: row;
+		align-items: start;
+		gap: 20px;
 		margin: 10px 0 10px 0;
 		list-style: none;
 		cursor: pointer;
 	}
 
-	.contact__list-item span {
-		font-weight: 100;
+	.contact__list-item p {
+		padding-top: 3px;
 	}
 }
 
@@ -74,6 +77,7 @@
 	&-icon {
 		align-self: center; /* Вертикальное выравнивание */
 		justify-self: left; /* Горизонтальное выравнивание */
+		transition: transform 0.4s ease;
 
 		&__logo {
 			width: 31px;
@@ -89,13 +93,14 @@
 	margin: 0 20px 0 25px;
 	max-width: 280px;
 	padding: 25px 0;
+
 	/* padding-left: 8px; */
-	border-bottom: 1px solid rgb(72, 70, 70);
 
 	.education__title {
 		text-transform: uppercase;
 		font-weight: 700;
 		letter-spacing: 1.5px;
+		transition: padding-left 0.3s ease;
 	}
 
 	.education__wrap {
@@ -108,26 +113,51 @@
 		display: grid;
 		grid-template-columns: 1fr 4fr;
 		margin: 10px 0 10px 0;
+		padding: 5px;
 		list-style: none;
 		cursor: pointer;
+		border-radius: 10px;
+		border-left: 3px solid transparent;
 
 		.list-item__icon {
 			align-self: self-start; /* Вертикальное выравнивание */
 			justify-self: left; /* Горизонтальное выравнивание */
-			
 
 			.icon__logo {
 				width: 32px;
 				height: 32px;
 				color: #67b4f2;
+				transition: transform 0.3s ease;
 			}
 		}
+		.education__list-item h4 {
+			font-weight: 500;
+		}
+		.education__text span {
+			font-weight: 100;
+		}
 	}
+}
 
-	.education__text span {
-		font-weight: 105;
-	}
-	.education__list-item h4 {
-		font-weight: 500;
-	}
+//HOVER
+
+.contact:hover .contact__title {
+	padding-left: 8px;
+}
+
+.contact__list-item:hover .item-icon {
+	transform: scale(1.1) rotate(6deg);
+}
+.contact__list-item:hover .item-icon .item-icon__logo {
+	color: #fff;
+}
+
+.education:hover .education__title {
+	padding-left: 8px;
+}
+
+.education__list-item:hover .list-item__icon .icon__logo {
+	//background: #67b4f2;
+	transform: scale(1.2) rotate(6deg);
+	color: #fff;
 }
