--- a/styles/index.scss
+++ b/styles/index.scss
@@ -17,7 +17,7 @@ body {
 	max-width: 900px;
 	height: 1200px;
 	box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
-	margin: 40px;
+	margin: 40px auto 40px;
 	grid-template-columns: 1fr 2fr;
 
 	@media (max-width: 768px) {
