--- a/styles/_left_side.scss
+++ b/styles/_left_side.scss
@@ -21,6 +21,7 @@
 		font-size: 45px;
 		line-height: 45px;
 		text-transform: uppercase;
+		letter-spacing: normal;
 		color: #fff;
 		font-weight: 500;
 		border-bottom: 1px solid rgb(72, 70, 70);
@@ -63,6 +64,7 @@
 		margin: 10px 0 10px 0;
 		list-style: none;
 		cursor: pointer;
+		transition: letter-spacing 0.3s ease;
 	}
 
 	.contact__list-item p {
@@ -77,7 +79,7 @@
 	&-icon {
 		align-self: center; /* Вертикальное выравнивание */
 		justify-self: left; /* Горизонтальное выравнивание */
-		transition: transform 0.4s ease;
+		transition: transform 0.3s ease;
 
 		&__logo {
 			width: 31px;
@@ -130,11 +132,11 @@
 				transition: transform 0.3s ease;
 			}
 		}
-		.education__list-item h4 {
-			font-weight: 500;
-		}
+
 		.education__text span {
+			font-size: 13px;
 			font-weight: 100;
+			transition: font-size 0.3s ease;
 		}
 	}
 }
@@ -143,6 +145,10 @@
 
 .contact:hover .contact__title {
 	padding-left: 8px;
+}
+
+.contact__list-item:hover {
+	letter-spacing: 0.02em;
 }
 
 .contact__list-item:hover .item-icon {
@@ -154,6 +160,9 @@
 
 .education:hover .education__title {
 	padding-left: 8px;
+}
+.education__text:hover span {
+	font-size: 12px;
 }
 
 .education__list-item:hover .list-item__icon .icon__logo {
