--- a/styles/_right_side.scss
+++ b/styles/_right_side.scss
@@ -16,6 +16,7 @@
 		text-transform: uppercase;
 		position: relative;
 		padding: 15px 0;
+		margin-bottom: 20px;
 
 		&::after {
 			content: '';
@@ -23,18 +24,15 @@
 			height: 2px;
 			position: absolute;
 			top: 60px;
-			border-radius: 3px;
+			border-radius: 2px;
 			left: 0;
 			background-color: v.$color-grey;
 		}
 	}
-	&__desc {
-		padding: 15px 0;
+	&__header h4 {
+		margin: 5px;
+		transition: color 0.5s ease;
 	}
-}
-
-.work_experience {
-	//border: 0.5px solid gray;
 }
 
 .work {
@@ -52,7 +50,7 @@
 			position: absolute;
 			top: 40px;
 			left: 0;
-			background-color: v.$color-darkgrey;
+			background-color: v.$color-grey;
 		}
 	}
 
@@ -101,20 +99,8 @@
 			&::after {
 				width: 7px;
 				height: 7px;
-				top: 45%;
+				top: 60%;
 			}
-
-			// & span {
-			// 	position: absolute;
-			// 	bottom: 15%;
-			// 	left: 50%;
-			// 	transform: translateX(-50%);
-			// 	width: 7px;
-			// 	height: 7px;
-			// 	background-color: #fff;
-			// 	border-radius: 50%;
-			// 	border: 2px solid grey;
-			// }
 		}
 
 		.job-1 {
@@ -134,6 +120,10 @@
 		justify-content: start;
 		align-items: start;
 		text-transform: none;
+
+		ul {
+			font-size: 14px;
+		}
 	}
 }
 
@@ -143,54 +133,32 @@
 	color: #67b4f2;
 }
 
-.hobby {
+.skills {
 	&__title {
+		font-size: 28px;
 		font-weight: 500;
 		text-transform: uppercase;
+		margin-bottom: 20px;
+		margin-top: 15px;
 		position: relative;
-		padding: 15px 0;
+
 		&::after {
 			content: '';
-			width: 60px;
+			width: 100px;
 			height: 2px;
+			border-radius: 1px;
 			position: absolute;
-			top: 60px;
-			border-radius: 3px;
+			top: 42px;
 			left: 0;
 			background-color: v.$color-grey;
 		}
 	}
-	&__grid {
-		margin-top: 30px;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 1fr 1fr;
-
-		grid-template-areas:
-			'hobby-1 hobby-2'
-			'hobby-3 hobby-4';
-
-		gap: 15px;
-
-		.hobby-1 {
-			grid-area: hobby-1;
-		}
-		.hobby-2 {
-			grid-area: hobby-2;
-		}
-		.hobby-3 {
-			grid-area: hobby-3;
-		}
-		.hobby-4 {
-			grid-area: hobby-4;
-		}
-
-		&-wrapper {
-			display: flex;
-			justify-content: flex-start;
-			flex-direction: row;
-			gap: 10px;
-		}
+	&__desc {
+		font-size: 14px;
+		font-weight: 500;
+	}
+	&__desc li {
+		padding: 3px;
 	}
 }
 
@@ -212,4 +180,10 @@
 	height: 4px;
 	border-radius: 2px;
 	background: #e90707;
+}
+
+//-----HOVER-----//
+
+.profile:hover .profile__header {
+	color: #825c5c;
 }
