--- a/styles/_right_side.scss
+++ b/styles/_right_side.scss
@@ -153,12 +153,51 @@
 			background-color: v.$color-grey;
 		}
 	}
-	&__desc {
+	&__list {
 		font-size: 14px;
 		font-weight: 500;
+		padding: 0;
+
+		&-item {
+			list-style: none;
+			display: grid;
+			grid-template-columns: 1fr 7fr;
+			justify-content: start;
+			align-items: flex-start;
+			margin-top: 3px;
+
+			&-logo {
+				display: flex;
+				justify-content: center;
+				align-items: flex-start;
+				&-svg {
+					width: 32px;
+					height: 32px;
+					color: v.$color-grey;
+					transition: transform 0.3s ease, color 0.3s ease;
+				}
+			}
+		}
 	}
 	&__desc li {
 		padding: 3px;
+	}
+}
+
+#js {
+	width: 40px;
+	height: 40px;
+}
+
+.btn {
+	border-radius: 0.6em;
+	margin: 2px 3px 2px 0;
+	padding: 0.3em 0.5em;
+	border: none;
+	background-color: v.$btn-color;
+	&__link {
+		text-decoration: none;
+		color: v.$color-darkgrey;
 	}
 }
 
