--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 $color-darkgrey: #232323;
 $color-grey: #4a4d4e;
 $color-lightgray: #bfbdc1;
+$btn-color: #e0ddda;
 $color-blue: #67b4f2;
 
 //v.$color-blue
