--- a/styles/_left_side.scss
+++ b/styles/_left_side.scss
@@ -188,7 +188,7 @@
 		width: 30px;
 		height: 30px;
 		color: v.$color-blue;
-		transition: transform 0.3s ease;
+		transition: transform 0.3s ease, fill 0.3s ease, color 0.3s ease;
 	}
 }
 
