--- a/styles/_right_side.scss
+++ b/styles/_right_side.scss
@@ -17,6 +17,7 @@
 		}
 		.profile__title {
 			transform: translateX(10px);
+			font-weight: 700;
 			&::after {
 				width: 100px;
 				background-color: red;
@@ -30,7 +31,7 @@
 		position: relative;
 		padding: 15px 0;
 		margin-bottom: 20px;
-		transition: transform 0.4s ease;
+		transition: transform 0.4s ease, font-weight 0.4s ease;
 
 		&::after {
 			content: '';
@@ -54,6 +55,7 @@
 	&:hover {
 		.work__title {
 			transform: translateX(10px);
+			font-weight: 700;
 			&::after {
 				transform: translateX(3px);
 				width: 160px;
@@ -67,7 +69,7 @@
 		text-transform: uppercase;
 		margin-top: 30px;
 		position: relative;
-		transition: transform 0.4s ease;
+		transition: transform 0.4s ease, font-weight 0.4s ease;
 
 		&::after {
 			content: '';
@@ -176,6 +178,7 @@
 	&:hover {
 		.skills__title {
 			transform: translateX(10px);
+			font-weight: 700;
 			&::after {
 				transform: translateX(3px);
 				width: 110px;
@@ -191,7 +194,7 @@
 		margin-bottom: 20px;
 		margin-top: 15px;
 		position: relative;
-		transition: transform 0.4s ease;
+		transition: transform 0.4s ease, font-weight 0.4s ease;
 
 		&::after {
 			content: '';
@@ -214,7 +217,7 @@
 		&-item {
 			list-style: none;
 			display: grid;
-			grid-template-columns: 1fr 7fr;
+			grid-template-columns: 90px 7fr;
 			justify-content: start;
 			align-items: flex-start;
 			margin-top: 3px;
@@ -263,7 +266,7 @@
 			&-item {
 				list-style: none;
 				display: grid;
-				grid-template-columns: 1fr 5fr;
+				grid-template-columns: 90px 7fr;
 				justify-content: start;
 				align-items: flex-start;
 				flex-wrap: wrap;
