--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,7 +2,7 @@
 @use 'sass:color';
 
 body {
-	background: url('/img/7205.webp') center/cover no-repeat;
+	background: url('../img/7205.webp') center/cover no-repeat;
 	background-attachment: fixed;
 	//background-color: #cdcccc;
 	display: flex;
