scroll - behavior: smooth, изменил иконку java

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,10 @@
 @use 'importer';
 @use 'sass:color';
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	background: url('/img/7205.webp') center/cover no-repeat;
 	background-attachment: fixed;
