--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-	background: url('/img/7205.webp') center/cover no-repeat;
+	background: url('../img/7205.webp') center/cover no-repeat;
 	background-attachment: fixed;
 	//background-color: #cdcccc;
 	display: flex;
