--- a/styles/_right_side.scss
+++ b/styles/_right_side.scss
@@ -364,6 +364,8 @@
 
 	&__link {
 		text-decoration: none;
+		font-family: 'Inter Tight', sans-serif;
+		font-weight: 500;
 		color: inherit;
 		display: block;
 	}
